# gRPCDemo

./: .gitignore  CMakeLists.bak  CMakeLists.txt  README.md  client.cpp  data_client.cpp  data_server.cpp  datatransfer.proto  helloworld.proto  server.cpp  tcp_client.cpp  tcp_server.cpp  transfer_client.cpp  transfer_server.cpp  transferfile.proto
